--- a/index.html
+++ b/index.html
@@ -206,5 +206,213 @@
       &copy; 2025 Physics-IQ Benchmark Project
     </footer>
   </div>
+
+<!-- Leaderboard -->
+    <div class="leaderboard">
+      <h2>Leaderboard 🥇</h2>
+      <table class="leaderboard-table">
+        <thead>
+          <tr>
+            <th>Model</th>
+            <th>Physics IQ Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>VideoPoet (multiframe) <span style="color:gold;">&#x1F3C6;</span></td>
+            <td>
+              <!-- Add data-score attribute for hover tooltip -->
+              <div class="progress">
+                <div class="progress-bar" style="width:20.7%;" data-score="20.7%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Runway Gen 3 (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:16.2%;" data-score="16.2%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>VideoPoet (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:15.7%;" data-score="15.7%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Stable Video Diffusion (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:15%;" data-score="15.0%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Lumiere (multiframe)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:11.9%;" data-score="11.9%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Pika 1.0 (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:10.9%;" data-score="10.9%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Sora (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:9.2%;" data-score="9.2%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Lumiere (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:8.8%;" data-score="8.8%"></div>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Samples -->
+    <div class="section-wrapper">
+      <h2>Examples 🎞️</h2>
+    </div>
+
+    <div class="video-samples">
+      <div class="arrow arrow-left" onclick="prevSlide()">&lsaquo;</div>
+      <div class="slides-container" id="slidesContainer">
+        <!-- Slide 1 -->
+        <div class="slide">
+          <div class="frame">
+            <video src="assets/sample5a.mp4" controls muted autoplay loop></video>
+            <div class="caption">Real test frames</div>
+          </div>
+          <div class="frame">
+            <video src="assets/sample5b.mp4" controls muted autoplay loop></video>
+            <div class="caption">Sora</div>
+          </div>
+        </div>
+        <!-- Slide 2 -->
+        <div class="slide">
+          <div class="frame">
+            <video src="assets/sample1a.mp4" controls muted autoplay loop></video>
+            <div class="caption">Real test frames</div>
+          </div>
+          <div class="frame">
+            <video src="assets/sample1b.mp4" controls muted autoplay loop></video>
+            <div class="caption">Pika 1.0</div>
+          </div>
+        </div>
+        <!-- Slide 3 -->
+        <div class="slide">
+          <div class="frame">
+            <video src="assets/sample2a.mp4" controls muted autoplay loop></video>
+            <div class="caption">Real test frames</div>
+          </div>
+          <div class="frame">
+            <video src="assets/sample2b.mp4" controls muted autoplay loop></video>
+            <div class="caption">VideoPoet (multiframe)</div>
+          </div>
+        </div>
+        <!-- Slide 4 -->
+        <div class="slide">
+          <div class="frame">
+            <video src="assets/sample3a.mp4" controls muted autoplay loop></video>
+            <div class="caption">Real test frames</div>
+          </div>
+          <div class="frame">
+            <video src="assets/sample3b.mp4" controls muted autoplay loop></video>
+            <div class="caption">Runway Gen 3</div>
+          </div>
+        </div>
+        <!-- Slide 5 -->
+        <div class="slide">
+          <div class="frame">
+            <video src="assets/sample4a.mp4" controls muted autoplay loop></video>
+            <div class="caption">Real test frames</div>
+          </div>
+          <div class="frame">
+            <video src="assets/sample4b.mp4" controls muted autoplay loop></video>
+            <div class="caption">Stable Video Diffusion</div>
+          </div>
+        </div>
+        <!-- Slide 6 -->
+        <div class="slide">
+          <div class="frame">
+            <video src="assets/sample6a.mp4" controls muted autoplay loop></video>
+            <div class="caption">Real test frames</div>
+          </div>
+          <div class="frame">
+            <video src="assets/sample6b.mp4" controls muted autoplay loop></video>
+            <div class="caption">Lumiere (i2v)</div>
+          </div>
+        </div>
+        <!-- Slide 7 -->
+        <div class="slide">
+          <div class="frame">
+            <video src="assets/sample7a.mp4" controls muted autoplay loop></video>
+            <div class="caption">Real test frames</div>
+          </div>
+          <div class="frame">
+            <video src="assets/sample7b.mp4" controls muted autoplay loop></video>
+            <div class="caption">VideoPoet (i2v)</div>
+          </div>
+        </div>
+        <!-- Slide 8 -->
+        <div class="slide">
+          <div class="frame">
+            <video src="assets/sample8a.mp4" controls muted autoplay loop></video>
+            <div class="caption">Real test frames</div>
+          </div>
+          <div class="frame">
+            <video src="assets/sample8b.mp4" controls muted autoplay loop></video>
+            <div class="caption">Lumiere (multiframe)</div>
+          </div>
+        </div>
+      </div>
+      <div class="arrow arrow-right" onclick="nextSlide()">&rsaquo;</div>
+    </div>
+
+    <footer>
+      &copy; 2025 Physics-IQ Benchmark Project
+    </footer>
+  </div> <!-- End content-wrapper -->
+
+  <script>
+    const slidesContainer = document.getElementById('slidesContainer');
+    let currentSlide = 0;
+
+    function showSlide(index) {
+      const slides = document.querySelectorAll('.slide');
+      const totalSlides = slides.length;
+      if (index < 0) index = totalSlides - 1;
+      else if (index >= totalSlides) index = 0;
+      currentSlide = index;
+      slidesContainer.style.transform = translateX(-${currentSlide * 100}%);
+    }
+
+    function nextSlide() {
+      showSlide(currentSlide + 1);
+    }
+
+    function prevSlide() {
+      showSlide(currentSlide - 1);
+    }
+  </script>
+  
 </body>
 </html>
