--- a/index.html
+++ b/index.html
@@ -551,7 +551,8 @@
       if (index < 0) index = totalSlides - 1;
       else if (index >= totalSlides) index = 0;
       currentSlide = index;
-      slidesContainer.style.transform = translateX(-${currentSlide * 100}%);
+      slidesContainer.style.transform = `translateX(-${currentSlide * 100}%)`;
+
     }
 
     function nextSlide() {
