--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@ body {
 .content-wrapper {
   max-width: 1200px;
   margin: 0 auto;
-  background: #fbf8f2; 
+  background: #fff; /* Change to white */
   min-height: 100vh; 
   position: relative; 
   z-index: 1; 
   box-sizing: border-box;
 }
+
 
 
     .teaser-container {
