--- a/index.html
+++ b/index.html
@@ -318,6 +318,15 @@ body {
       </a>
     </div>
 
+
+    <!-- TL;DR -->
+    <div class="section-wrapper">
+      <h2>TL;DR</h2>
+      <p>
+        We develop the <strong>Physics-IQ benchmark</strong>, which reveals that AI video models lack physical understanding despite achieving visual realism.
+      </p>
+    </div>
+    
     <!-- Abstract -->
     <div class="section-wrapper">
       <h2>Abstract 📣</h2>
