--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ body {
     <!-- Slide 1: Match -->
     <div class="slide">
       <div class="frame">
-        <video src="../assets/lumw1.gif" autoplay muted loop></video>
+        <video src="/assets/lumw1.gif" autoplay muted loop></video>
         <div class="caption">Real Test Frames</div>
       </div>
       <div class="frame">
