--- a/index.html
+++ b/index.html
@@ -439,11 +439,11 @@ body {
     <!-- Slide 1: Match -->
     <div class="slide">
       <div class="frame">
-        <video src="../match/real_match.gif" autoplay muted loop></video>
+        <imgo src="../match/real_match.gif" autoplay muted loop></video>
         <div class="caption">Real Test Frames</div>
       </div>
       <div class="frame">
-        <video src="../match/vp_m_match.gif" autoplay muted loop></video>
+        <img src="../match/vp_m_match.gif" autoplay muted loop></video>
         <div class="caption">VideoPoet (multiframe)</div>
       </div>
       <div class="frame">
